k8s/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: osm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: 825621302666.dkr.ecr.ap-southeast-1.amazonaws.com/osm-gateway:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: osm
spec:
  type: LoadBalancer
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
