k8s/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: osm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "4003"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: order-service
          image: 825621302666.dkr.ecr.ap-southeast-1.amazonaws.com/osm-order-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4003
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /api/orders/
              port: 4003
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/orders/
              port: 4003
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: osm
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 4003
      targetPort: 4003
