k8s/product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: osm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: 825621302666.dkr.ecr.ap-southeast-1.amazonaws.com/osm-product-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4002
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /api/products/
              port: 4002
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/products/
              port: 4002
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: osm
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
