k8s/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: osm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: 825621302666.dkr.ecr.ap-southeast-1.amazonaws.com/osm-user-service:latest
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: osm
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
